// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch component renders a Switch in "on" state 1`] = `
.sxolizv {
  -webkit-appearance: none;
  appearance: none;
  background-color: var(--sx-colors-tonal300);
  border: none;
  border-radius: var(--sx-radii-round);
  cursor: pointer;
  display: flex;
  overflow: hidden;
  padding: var(--sx-space-0);
  position: relative;
  transition: background-color 100ms ease;
  width: var(--sx-sizes-5);
}

.sxolizv:hover {
  background-color: var(--sx-colors-tonal400);
}

.sxolizv[data-state="checked"] {
  background-color: var(--sx-colors-primary);
}

.sxolizv[data-state="checked"]:hover {
  background-color: var(--sx-colors-tertiary);
}

.sx2r6fb {
  display: block;
  height: var(--sx-sizes-2);
  width: var(--sx-sizes-2);
  background-color: white;
  border-radius: var(--sx-radii-round);
  transition: transform 100ms;
  will-change: transform;
}

.sx2r6fb[data-state="checked"] {
  transform: translateX(calc(var(--sx-sizes-2) - var(--sx-space-1)));
}

<div>
  <input
    checked=""
    hidden=""
    type="checkbox"
    value="on"
  />
  <button
    aria-checked="true"
    class="sxolizv"
    data-state="checked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="sx2r6fb"
      data-state="checked"
    />
  </button>
</div>
`;

exports[`Switch component renders a disabled switch 1`] = `
.sxolizv {
  -webkit-appearance: none;
  appearance: none;
  background-color: var(--sx-colors-tonal300);
  border: none;
  border-radius: var(--sx-radii-round);
  cursor: pointer;
  display: flex;
  overflow: hidden;
  padding: var(--sx-space-0);
  position: relative;
  transition: background-color 100ms ease;
  width: var(--sx-sizes-5);
}

.sxolizv:hover {
  background-color: var(--sx-colors-tonal400);
}

.sxolizv[data-state="checked"] {
  background-color: var(--sx-colors-primary);
}

.sxolizv[data-state="checked"]:hover {
  background-color: var(--sx-colors-tertiary);
}

.sx2r6fb {
  display: block;
  height: var(--sx-sizes-2);
  width: var(--sx-sizes-2);
  background-color: white;
  border-radius: var(--sx-radii-round);
  transition: transform 100ms;
  will-change: transform;
}

.sx2r6fb[data-state="checked"] {
  transform: translateX(calc(var(--sx-sizes-2) - var(--sx-space-1)));
}

<div>
  <input
    disabled=""
    hidden=""
    type="checkbox"
    value="on"
  />
  <button
    aria-checked="false"
    class="sxolizv"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="sx2r6fb"
      data-disabled=""
      data-state="unchecked"
    />
  </button>
</div>
`;

exports[`Switch component renders a switch 1`] = `
.sxolizv {
  -webkit-appearance: none;
  appearance: none;
  background-color: var(--sx-colors-tonal300);
  border: none;
  border-radius: var(--sx-radii-round);
  cursor: pointer;
  display: flex;
  overflow: hidden;
  padding: var(--sx-space-0);
  position: relative;
  transition: background-color 100ms ease;
  width: var(--sx-sizes-5);
}

.sxolizv:hover {
  background-color: var(--sx-colors-tonal400);
}

.sxolizv[data-state="checked"] {
  background-color: var(--sx-colors-primary);
}

.sxolizv[data-state="checked"]:hover {
  background-color: var(--sx-colors-tertiary);
}

.sx2r6fb {
  display: block;
  height: var(--sx-sizes-2);
  width: var(--sx-sizes-2);
  background-color: white;
  border-radius: var(--sx-radii-round);
  transition: transform 100ms;
  will-change: transform;
}

.sx2r6fb[data-state="checked"] {
  transform: translateX(calc(var(--sx-sizes-2) - var(--sx-space-1)));
}

<div>
  <input
    hidden=""
    type="checkbox"
    value="on"
  />
  <button
    aria-checked="false"
    class="sxolizv"
    data-state="unchecked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="sx2r6fb"
      data-state="unchecked"
    />
  </button>
</div>
`;
